--- a/synce-kpm/data/synce-kpm-mainwindow.ui
+++ b/synce-kpm/data/synce-kpm-mainwindow.ui
@@ -1,6 +1,6 @@
 <ui version="4.0" >
  <class>mainWindow</class>
- <widget class="QWidget" name="mainWindow" >
+ <widget class="QWidget" name="synce-kpm-mainwindow" >
   <property name="geometry" >
    <rect>
     <x>0</x>
@@ -10,7 +10,7 @@
    </rect>
   </property>
   <property name="windowTitle" >
-   <string>SynCE KDE Device Manager</string>
+   <string>SynCE KDE PDA Manager</string>
   </property>
   <widget class="QGroupBox" name="groupBox" >
    <property name="geometry" >
