--- a/trunk/synce-kpm/synce-kpm/data/ui/synce-kpm-mainwindow.ui
+++ b/trunk/synce-kpm/synce-kpm/data/ui/synce-kpm-mainwindow.ui
@@ -1,6 +1,6 @@
 <ui version="4.0" >
  <class>mainWindow</class>
- <widget class="QWidget" name="synce-kpm-mainwindow" >
+ <widget class="QWidget" name="synce_kpm_mainwindow" >
   <property name="geometry" >
    <rect>
     <x>0</x>
