--- a/trunk/synce-kpm/synce-kpm/data/ui/synce-kpm-mainwindow.ui
+++ b/trunk/synce-kpm/synce-kpm/data/ui/synce-kpm-mainwindow.ui
@@ -5,12 +5,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>576</width>
-    <height>443</height>
+    <width>582</width>
+    <height>494</height>
    </rect>
   </property>
   <property name="windowTitle" >
-   <string>SynCE KDE PDA Manager</string>
+   <string>SynCE PDA Device Manager</string>
   </property>
   <widget class="QGroupBox" name="groupBox" >
    <property name="geometry" >
@@ -59,6 +59,11 @@
       <height>16</height>
      </rect>
     </property>
+    <property name="font" >
+     <font>
+      <family>Penguin Attack</family>
+     </font>
+    </property>
     <property name="value" >
      <number>0</number>
     </property>
@@ -77,73 +82,11 @@
     </property>
    </widget>
   </widget>
-  <widget class="QGroupBox" name="groupBox_2" >
-   <property name="geometry" >
-    <rect>
-     <x>30</x>
-     <y>120</y>
-     <width>521</width>
-     <height>271</height>
-    </rect>
-   </property>
-   <property name="title" >
-    <string>Programs</string>
-   </property>
-   <widget class="QPushButton" name="pushButton_InstallCAB" >
-    <property name="geometry" >
-     <rect>
-      <x>440</x>
-      <y>240</y>
-      <width>75</width>
-      <height>24</height>
-     </rect>
-    </property>
-    <property name="text" >
-     <string>&amp;Install CAB</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton_Uninstall" >
-    <property name="geometry" >
-     <rect>
-      <x>440</x>
-      <y>50</y>
-      <width>75</width>
-      <height>24</height>
-     </rect>
-    </property>
-    <property name="text" >
-     <string>&amp;Uninstall</string>
-    </property>
-   </widget>
-   <widget class="QListWidget" name="listInstalledPrograms" >
-    <property name="geometry" >
-     <rect>
-      <x>20</x>
-      <y>20</y>
-      <width>411</width>
-      <height>211</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton_Refresh" >
-    <property name="geometry" >
-     <rect>
-      <x>440</x>
-      <y>20</y>
-      <width>75</width>
-      <height>24</height>
-     </rect>
-    </property>
-    <property name="text" >
-     <string>&amp;Refresh</string>
-    </property>
-   </widget>
-  </widget>
   <widget class="QPushButton" name="pushButton_Quit" >
    <property name="geometry" >
     <rect>
      <x>470</x>
-     <y>400</y>
+     <y>440</y>
      <width>75</width>
      <height>24</height>
     </rect>
@@ -151,6 +94,78 @@
    <property name="text" >
     <string>&amp;Quit</string>
    </property>
+  </widget>
+  <widget class="QTabWidget" name="tabWidget" >
+   <property name="geometry" >
+    <rect>
+     <x>30</x>
+     <y>120</y>
+     <width>521</width>
+     <height>311</height>
+    </rect>
+   </property>
+   <property name="currentIndex" >
+    <number>0</number>
+   </property>
+   <widget class="QWidget" name="tab" >
+    <attribute name="title" >
+     <string>System Information</string>
+    </attribute>
+   </widget>
+   <widget class="QWidget" name="tab_2" >
+    <attribute name="title" >
+     <string>Software Manager</string>
+    </attribute>
+    <widget class="QListWidget" name="listInstalledPrograms" >
+     <property name="geometry" >
+      <rect>
+       <x>10</x>
+       <y>30</y>
+       <width>411</width>
+       <height>211</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButton_Refresh" >
+     <property name="geometry" >
+      <rect>
+       <x>430</x>
+       <y>30</y>
+       <width>75</width>
+       <height>24</height>
+      </rect>
+     </property>
+     <property name="text" >
+      <string>&amp;Refresh</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButton_Uninstall" >
+     <property name="geometry" >
+      <rect>
+       <x>430</x>
+       <y>60</y>
+       <width>75</width>
+       <height>24</height>
+      </rect>
+     </property>
+     <property name="text" >
+      <string>&amp;Uninstall</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButton_InstallCAB" >
+     <property name="geometry" >
+      <rect>
+       <x>10</x>
+       <y>250</y>
+       <width>75</width>
+       <height>24</height>
+      </rect>
+     </property>
+     <property name="text" >
+      <string>&amp;Install CAB</string>
+     </property>
+    </widget>
+   </widget>
   </widget>
  </widget>
  <resources/>
