--- a/trunk/synce-kpm/synce-kpm/data/ui/synce-kpm-mainwindow.ui
+++ b/trunk/synce-kpm/synce-kpm/data/ui/synce-kpm-mainwindow.ui
@@ -10,7 +10,7 @@
    </rect>
   </property>
   <property name="windowTitle" >
-   <string>SynCE PDA Device Manager</string>
+   <string>SynCE KDE PDA Manager</string>
   </property>
   <widget class="QGroupBox" name="groupBox" >
    <property name="geometry" >
