--- a/trayicon/data/synce_trayicon_properties.glade
+++ b/trayicon/data/synce_trayicon_properties.glade
@@ -67,6 +67,22 @@
                           </packing>
                         </child>
                         <child>
+                          <widget class="GtkRadioButton" id="prefs_use_hal">
+                            <property name="visible">True</property>
+                            <property name="can_focus">True</property>
+                            <property name="label" translatable="yes">Hal</property>
+                            <property name="use_underline">True</property>
+                            <property name="response_id">0</property>
+                            <property name="draw_indicator">True</property>
+                            <property name="group">prefs_use_odccm</property>
+                          </widget>
+                          <packing>
+                            <property name="expand">False</property>
+                            <property name="fill">False</property>
+                            <property name="position">1</property>
+                          </packing>
+                        </child>
+                        <child>
                           <widget class="GtkRadioButton" id="prefs_use_vdccm">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
@@ -79,7 +95,7 @@
                           <packing>
                             <property name="expand">False</property>
                             <property name="fill">False</property>
-                            <property name="position">1</property>
+                            <property name="position">2</property>
                           </packing>
                         </child>
                         <child>
@@ -112,7 +128,7 @@
                             </child>
                           </widget>
                           <packing>
-                            <property name="position">2</property>
+                            <property name="position">3</property>
                           </packing>
                         </child>
                       </widget>
@@ -394,9 +410,6 @@
                       </packing>
                     </child>
                   </widget>
-                  <packing>
-                    <property name="tab_expand">False</property>
-                  </packing>
                 </child>
                 <child>
                   <widget class="GtkLabel" id="partners_tab_label">
@@ -405,7 +418,6 @@
                   </widget>
                   <packing>
                     <property name="type">tab</property>
-                    <property name="tab_expand">False</property>
                     <property name="tab_fill">False</property>
                   </packing>
                 </child>
@@ -698,7 +710,6 @@
                     <child>
                       <widget class="GtkFrame" id="frame1">
                         <property name="visible">True</property>
-                        <property name="label_xalign">0</property>
                         <property name="shadow_type">GTK_SHADOW_IN</property>
                         <child>
                           <widget class="GtkAlignment" id="alignment1">
@@ -862,7 +873,6 @@
                   </widget>
                   <packing>
                     <property name="position">1</property>
-                    <property name="tab_expand">False</property>
                   </packing>
                 </child>
                 <child>
@@ -873,7 +883,6 @@
                   <packing>
                     <property name="type">tab</property>
                     <property name="position">1</property>
-                    <property name="tab_expand">False</property>
                     <property name="tab_fill">False</property>
                   </packing>
                 </child>
@@ -913,7 +922,6 @@
                     <child>
                       <widget class="GtkFrame" id="frame2">
                         <property name="visible">True</property>
-                        <property name="label_xalign">0</property>
                         <property name="shadow_type">GTK_SHADOW_IN</property>
                         <child>
                           <widget class="GtkAlignment" id="alignment2">
@@ -1030,7 +1038,6 @@
                     <child>
                       <widget class="GtkFrame" id="frame3">
                         <property name="visible">True</property>
-                        <property name="label_xalign">0</property>
                         <property name="shadow_type">GTK_SHADOW_IN</property>
                         <child>
                           <widget class="GtkAlignment" id="alignment3">
@@ -1147,7 +1154,6 @@
                   </widget>
                   <packing>
                     <property name="position">2</property>
-                    <property name="tab_expand">False</property>
                   </packing>
                 </child>
                 <child>
@@ -1158,7 +1164,6 @@
                   <packing>
                     <property name="type">tab</property>
                     <property name="position">2</property>
-                    <property name="tab_expand">False</property>
                     <property name="tab_fill">False</property>
                   </packing>
                 </child>
